# hi_autolanding

./: LICENSE  README.md  cali.sh  detect.sh  down.sh  im  land.sh  landing.sh  landing_sim.sh  run.sh  takeoff.sh  track.sh
shfiles/: april.sh  cam_cali.sh  checkcpu.sh  killmotor.sh  record.sh  relayoff.sh  relayon.sh  rspx4.sh  sys.sh
sim_shfiles/: map_plan.sh  px4_ctrl.sh  sim_gazebo.sh
src/detection/target_ekf/: CMakeLists.txt  package.xml
src/detection/target_ekf/config/: camera.yaml
src/detection/target_ekf/launch/: rviz.launch  rvizconfig.rviz  target_ekf.launch
src/detection/target_ekf/src/: target_ekf_node.cpp
src/mapping/config/: D435.yaml  rviz_real.rviz  rviz_sim.rviz
src/mapping/include/mapping/: mapping.h
src/mapping/launch/: arviz.launch  mapping.launch  robot.launch  run.launch  rviz_real.launch
src/mapping/src/: mapping.cc  mapping_nodelet.cpp
src/planning/planning/: CMakeLists.txt  package.xml
src/planning/planning/include/: RapidTrajectoryGenerator.h  SingleAxisTrajectory.h
src/planning/planning/launch/: debug.launch  fake_target.launch  planning.launch  run.launch  simulation1.launch  simulation1_vis.launch  simulation2.launch  test.launch
src/planning/planning/src/: RapidTrajectoryGenerator.cpp  SingleAxisTrajectory.cpp  obvp_server.cpp  planning_nodelet.cpp  planning_nodelet_bak.cpp  traj_server.cpp
src/planning/traj_opt/src/: traj_opt.cc  traj_opt_fake.cc  traj_opt_perching.cc  (+1 more)
src/quadrotor_msgs/msg/: TakeoffLand.msg
src/real_flight_modules/px4ctrl/: CMakeLists.txt  package.xml
src/real_flight_modules/uavsensor/: CMakeLists.txt  package.xml
src/real_flight_modules/uavsensor/include/uavsensor/: safeserial.hpp  tfluna_laser.hpp  ykusrelay.hpp
src/real_flight_modules/uavsensor/launch/: laser.launch  rccmd.launch  relay.launch
src/real_flight_modules/uavsensor/src/: .rccmd_node.cpp.swp  rccmd_node.cpp  relayctrl_node.cpp  tfluna_node.cpp
src/sim_utils/sim_msgs/: CMakeLists.txt  package.xml
src/sim_utils/sim_msgs/msg/: sim_rccmd.msg  task_ctrl.msg  task_state.msg
src/sim_utils/sim_node/: CMakeLists.txt  package.xml
src/sim_utils/true_odom_publisher/: CMakeLists.txt  package.xml
src/uav_simulator/local_sensing/: CMakeLists.txt
(+67 files in other folders)
